--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ author: Shantanu Mishra
 favicon: favicon.svg
 remote_theme: yree/mold
 footer_content: >
-  ##### [Yree](https://yree.io) :: [Github](https://github.com/yree)
+  ##### [Yree](https://yree.io) :: [github](https://github.com/yree)
