--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,5 @@ author: Shantanu Mishra
 favicon: favicon.svg
 remote_theme: yree/mold
 footer_content: >
-  [Yree](https://yree.io) :: [github](https://github.com/yree)
+  [Yree](https://yree.io) — [github](https://github.com/yree)
+goat_counter: yree
